--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django==5.2",
+    "django-filter>=25.2",
     "djangorestframework>=3.16.1",
+    "djangorestframework-stubs>=3.16.8",
+    "drf-spectacular>=0.29.0",
     "langchain>=1.2.9",
     "langchain-anthropic>=1.3.2",
     "langchain-community>=0.4.1",
