--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django==5.2",
+    "django-cors-headers>=4.9.0",
     "django-filter>=25.2",
     "djangorestframework>=3.16.1",
     "djangorestframework-stubs>=3.16.8",
