--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ dependencies = [
     "django-filter>=25.2",
     "djangorestframework>=3.16.1",
     "djangorestframework-stubs>=3.16.8",
+    "docx2txt>=0.9",
     "drf-spectacular>=0.29.0",
     "langchain>=1.2.9",
     "langchain-anthropic>=1.3.2",
     "langchain-community>=0.4.1",
     "langchain-openai>=1.1.7",
+    "mammoth>=1.11.0",
     "pdfplumber>=0.11.9",
     "python-docx>=1.2.0",
     "python-dotenv>=1.2.1",
