--- a/cv_match/.env_example
+++ b/cv_match/.env_example
@@ -1,3 +1,8 @@
+DEBUG=True
+SECRET_KEY=
+ALLOWED_HOSTS=localhost, 127.0.0.1
+
+
 EXTRACTION_MODEL_PROVIDER=openai
 EXTRACTION_MODEL=gpt-4o
 OPENAI_API_KEY=
